--- a/tools/related.html
+++ b/tools/related.html
@@ -229,10 +229,10 @@
     <script>
 const ENDPOINT = "https://newsroom-tools.netlify.app/api/fetch-metadata";
 
+/* ---------- Domain guard ---------- */
 function ensureNetra(urlStr) {
   try {
     const u = new URL(urlStr);
-    // Must be HTTPS and either netra.news or any *.netra.news subdomain
     const domainOk = u.hostname === "netra.news" || u.hostname.endsWith(".netra.news");
     const httpsOk = u.protocol === "https:";
     return domainOk && httpsOk;
@@ -241,20 +241,63 @@ function ensureNetra(urlStr) {
   }
 }
 
-// --- NEW: call Netlify API instead of fetching the article HTML directly ---
+/* ---------- Utils: BN/EN detection + date formats ---------- */
+const BN_MONTHS = ["জানুয়ারি","ফেব্রুয়ারি","মার্চ","এপ্রিল","মে","জুন","জুলাই","আগস্ট","সেপ্টেম্বর","অক্টোবর","নভেম্বর","ডিসেম্বর"];
+const EN_MONTHS = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+const BN_DIGITS = { "0":"০","1":"১","2":"২","3":"৩","4":"৪","5":"৫","6":"৬","7":"৭","8":"৮","9":"৯" };
+
+function isBengaliTitle(str) {
+  return /[\u0980-\u09FF]/.test(str || "");
+}
+function toBnDigits(s) {
+  return String(s).replace(/\d/g, d => BN_DIGITS[d]);
+}
+function ordinalEn(n) {
+  const s = ["th","st","nd","rd"], v = n % 100;
+  return n + (s[(v - 20) % 10] || s[v] || s[0]);
+}
+function formatDateLocalized(iso, includeYear, useBn) {
+  if (!iso) return "";
+  const d = new Date(iso + (iso.length === 10 ? "T00:00:00" : ""));
+  if (isNaN(d)) return "";
+
+  if (useBn) {
+    // ২২ অক্টোবর ২০২৫ (omit year when includeYear=false)
+    const day = toBnDigits(d.getDate());
+    const month = BN_MONTHS[d.getMonth()];
+    const year = toBnDigits(d.getFullYear());
+    return includeYear ? `${day} ${month} ${year}` : `${day} ${month}`;
+  } else {
+    // October 22, 2025 (omit year when includeYear=false, and drop comma)
+    const month = EN_MONTHS[d.getMonth()];
+    const day = ordinalEn(d.getDate());
+    const year = d.getFullYear();
+    return includeYear ? `${month} ${day} ${year}` : `${month} ${day}`;
+  }
+}
+function esc(str) {
+  return String(str).replace(/[&<>\"']/g, c => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[c]));
+}
+function findFetchBtn() {
+  // Robustly find the "Fetch metadata" submit button without needing an id
+  const candidates = Array.from(document.querySelectorAll('button[type="submit"]'));
+  return candidates.find(b => /fetch metadata/i.test(b.textContent)) || null;
+}
+
+/* ---------- API fetch ---------- */
 async function fetchMetadata() {
-  const btn = document.querySelector("#fetch-btn");
+  const btn = findFetchBtn();
   const url = document.getElementById("url").value.trim();
   if (!url) return;
   if (!ensureNetra(url)) { alert("Only netra.news URLs allowed."); return; }
 
   btn?.setAttribute("disabled", "disabled");
   btn?.setAttribute("data-loading", "1");
+
   try {
     const r = await fetch(`${ENDPOINT}?url=${encodeURIComponent(url)}`);
     const data = await r.json().catch(() => ({}));
     if (!r.ok) {
-      // Show API detail when 422 (missing fields)
       const details = data?.found
         ? `\nFound:\n- title: ${!!data.found.title}\n- byline: ${!!data.found.byline}\n- published: ${!!data.found.published}`
         : "";
@@ -270,8 +313,7 @@ async function fetchMetadata() {
   }
 }
 
-
-// --- NEW: populate inputs from API JSON ---
+/* ---------- Populate inputs from API ---------- */
 function fillFromApi(meta) {
   const { title, byline, published, url } = meta || {};
   if (title) document.getElementById("title").value = title;
@@ -286,24 +328,19 @@ function fillFromApi(meta) {
   try { localStorage.setItem("nr_related_cache", JSON.stringify({ url, title, byline, published })); } catch {}
 }
 
-
-// --- Keep: paste-HTML fallback path ---
+/* ---------- Paste-HTML fallback ---------- */
 function parsePasted() {
   const html = document.getElementById('htmlPaste').value.trim();
   if (html) extractAndFill(html);
 }
-
-// --- Your existing HTML parser (unchanged) ---
 function extractAndFill(html) {
   const doc = new DOMParser().parseFromString(html, 'text/html');
 
-  // Title
   const title =
     doc.querySelector('meta[property="og:title"]')?.content ||
     doc.querySelector('meta[name="twitter:title"]')?.content ||
     (doc.title || '').trim();
 
-  // Author priority: article:author → og:author → name=author → body
   let author =
     doc.querySelector('meta[property="article:author"]')?.content ||
     doc.querySelector('meta[property="og:author"]')?.content ||
@@ -321,14 +358,10 @@ function extractAndFill(html) {
     ];
     for (const s of sel) {
       const el = doc.querySelector(s);
-      if (el) {
-        author = el.textContent.trim();
-        if (author) break;
-      }
+      if (el) { author = el.textContent.trim(); if (author) break; }
     }
   }
 
-  // Date
   let dateIso =
     doc.querySelector('meta[property="article:published_time"]')?.content ||
     doc.querySelector('meta[name="pubdate"]')?.content ||
@@ -353,6 +386,7 @@ function extractAndFill(html) {
   }
 }
 
+/* ---------- Builder (now auto-localised) ---------- */
 function buildSnippet() {
   const url = document.getElementById('url').value.trim();
   const title = document.getElementById('title').value.trim();
@@ -360,17 +394,19 @@ function buildSnippet() {
   const dateIso = document.getElementById('date').value;
   const includeYear = document.getElementById('include-year').checked;
 
-  // Hard validation: all three must be present
   if (!title) { alert('Missing story title.'); return; }
   if (!author) { alert('Missing author/byline.'); return; }
   if (!dateIso) { alert('Missing publish date.'); return; }
 
-  const dateTxt = formatDate(dateIso, includeYear);
+  const useBn = isBengaliTitle(title);
+  const label = useBn ? "প্রাসঙ্গিক" : "Related";
+  const aria = useBn ? "প্রাসঙ্গিক প্রতিবেদন" : "Related story";
+  const dateTxt = formatDateLocalized(dateIso, includeYear, useBn);
   if (!dateTxt) { alert('Invalid publish date.'); return; }
 
   const html = `
-<aside class="related-box" aria-label="Related story">
-  <div class="related-label">Related</div>
+<aside class="related-box" aria-label="${esc(aria)}">
+  <div class="related-label">${esc(label)}</div>
 
   <h3 class="related-title">
     <a href="${esc(url)}" target="_blank" rel="noopener">
@@ -380,7 +416,7 @@ function buildSnippet() {
 
   <div class="related-meta">
     <span class="byline"><span>${esc(author)}</span><span class="sep">·</span><span>${esc(dateTxt)}</span></span>
-    <a class="related-cta" href="${esc(url)}" target="_blank" rel="noopener" aria-label="Open related story">
+    <a class="related-cta" href="${esc(url)}" target="_blank" rel="noopener" aria-label="${useBn ? "প্রাসঙ্গিক প্রতিবেদন খুলুন" : "Open related story"}">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
         <path d="M5 12h12M13 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
@@ -395,36 +431,25 @@ function buildSnippet() {
   document.getElementById('preview').innerHTML = html;
 }
 
-function esc(str) {
-  return String(str).replace(/[&<>\"']/g, c => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[c]));
-}
-
-function ordinal(n) {
-  const s = ["th", "st", "nd", "rd"], v = n % 100;
-  return n + (s[(v - 20) % 10] || s[v] || s[0]);
-}
-
-function formatDate(iso, includeYear = true) {
-  if (!iso) return "";
-  const d = new Date(iso + "T00:00:00");
-  if (isNaN(d)) return "";
-  const month = d.toLocaleString(undefined, { month: "long" });
-  const day = ordinal(d.getDate());
-  const year = d.getFullYear();
-  return includeYear ? `${month} ${day} ${year}` : `${month} ${day}`;
-}
-
+/* ---------- Helpers & demo ---------- */
 function copyOut() {
   const txt = document.getElementById('output').value;
   if (!txt) return;
   navigator.clipboard.writeText(txt).then(() => alert("Copied!"));
 }
-
 function fillDemo() {
   document.getElementById('url').value =
     "https://netra.news/2025/palatine-awami-league-lobbying-pr-uk/";
 }
+
+/* Expose to window (your HTML already calls these) */
+window.fetchMetadata = fetchMetadata;
+window.parsePasted = parsePasted;
+window.buildSnippet = buildSnippet;
+window.copyOut = copyOut;
+window.fillDemo = fillDemo;
 </script>
+
 
 </body>
 
